<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTrophyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="67dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/rod_rockslogo"
            app:layout_constraintBottom_toTopOf="@+id/fishNameAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fishNameAdd"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="324dp"
            android:ems="10"
            android:hint="@string/fishNameAdd"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fishSizeAdd"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="61dp"
            android:layout_marginBottom="63dp"
            android:ems="10"
            android:hint="@string/fishSizeAdd"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/locationAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fishNameAdd" />

        <EditText
            android:id="@+id/locationAdd"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="124dp"
            android:layout_marginBottom="128dp"
            android:ems="10"
            android:hint="@string/locationAdd"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/descriptionTrophyAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fishNameAdd" />

        <EditText
            android:id="@+id/descriptionTrophyAdd"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_marginBottom="11dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/descriptionTrophyAdd"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/backHomeBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addTrophyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:backgroundTint="#FF9800"
            android:text="@string/addTrophyBtn"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="@+id/descriptionTrophyAdd"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTrophyAdd" />

        <Button
            android:id="@+id/backHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="51dp"
            android:text="@string/backHomeBtn"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descriptionTrophyAdd" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>