<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="256dp"
            android:layout_height="53dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/passwordSignUp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/emailSignUp"
            app:layout_constraintEnd_toStartOf="@+id/showPwdBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="265dp"
            android:layout_height="239dp"
            android:layout_marginStart="73dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="49dp"
            android:src="@drawable/rod_rockslogo"
            app:layout_constraintBottom_toTopOf="@+id/usernameSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backLogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="203dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="51dp"
            android:text="@string/backLogButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/emailSignUp"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/showPwdBtn"
            android:layout_width="72dp"
            android:layout_height="53dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="18dp"
            android:text="@string/showPwdBtn"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/emailSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameSignUp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="293dp"
            android:layout_height="53dp"
            android:layout_marginStart="57dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#FF9800"
            android:text="@string/signUpButton"
            app:layout_constraintBottom_toTopOf="@+id/backLogButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/usernameSignUp"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/usernameSignUp"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/passwordSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>